css fixup to make top gap nice

--- a/assets/chessground.base.css
+++ b/assets/chessground.base.css
@@ -136,7 +136,7 @@ piece.fading {
 
 .largerCoordinates coord {
   font-size: 25px;
-  transform: translate(-1px, -10px);
+  transform: translate(-2px, -10px);
 }
 
 .ranks.largerCoordinates {
